<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/choose_lvl_5x5"
    tools:context="com.example.willie_the_coyote.beep_beep.Fragments.ChooseLevel2x2">

    <LinearLayout
        android:id="@+id/ll_levels"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout style="@style/LevelsLayout">
            <ImageButton
                android:id="@+id/button1"
                android:src="@drawable/box5"
                style="@style/LevelButtons"
                android:contentDescription="@string/level_one"/>

            <ImageButton
                android:id="@+id/button2"
                android:src="@drawable/box1"
                style="@style/LevelButtons"
                android:contentDescription="@string/level_two"/>

            <ImageButton
                android:id="@+id/button3"
                android:src="@drawable/box2"
                style="@style/LevelButtons"
                android:contentDescription="@string/level_three"/>
        </LinearLayout>

        <LinearLayout style="@style/LevelsLayout">
            <ImageButton
                android:id="@+id/button4"
                android:src="@drawable/box3"
                style="@style/LevelButtons"
                android:contentDescription="@string/level_four"/>

            <ImageButton
                android:id="@+id/button5"
                android:src="@drawable/box4"
                style="@style/LevelButtons"
                android:contentDescription="@string/level_five"/>

            <ImageButton
                android:id="@+id/button6"
                android:src="@drawable/box5"
                style="@style/LevelButtons"
                android:contentDescription="@string/lelvel_six"/>
        </LinearLayout>

        <LinearLayout style="@style/LevelsLayout">
            <ImageButton
                android:id="@+id/button7"
                android:src="@drawable/box6"
                style="@style/LevelButtons"
                android:contentDescription="@string/level_seven"/>

            <ImageButton
                android:id="@+id/button8"
                android:src="@drawable/box7"
                style="@style/LevelButtons"
                android:contentDescription="@string/lelvel_eight"/>

            <ImageButton
                android:id="@+id/button9"
                android:src="@drawable/box8"
                style="@style/LevelButtons"
                android:contentDescription="@string/level_nine"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
